Création du service HeroService

--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -4,6 +4,7 @@
     <div><span>id :</span>{{hero.id}}</div>
     <div>
         <label>name :
+            <!-- [(ngModelng )] : binding double -->
             <input [(ngModel)]="hero.name" type="text" placeholder="name">
         </label>
     </div>
