--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,13 +1,12 @@
 <h2>Mes héros</h2>
 <ul class="heroes">
     <!-- ngFor permet de boucler sur la liste -->
-    <!-- [class.selected] permet d'ajouter une classe suivant une condition (ici le héro sélectionné) -->
-    <li *ngFor="let hero of heroes" (click)='onSelect(hero)' [class.selected]="hero === selectedHero">
-        <span class="badge">{{hero.id}}</span> {{hero.name}}
+    <li *ngFor="let hero of heroes">
+        <a routerLink="/detail/{{hero.id}}">
+            <span class="badge">{{hero.id}}</span> {{hero.name}}
+        </a>
     </li>
 </ul>
 
-<!-- [propertyName] : binding simple -->
-<app-hero-detail [hero]="selectedHero"></app-hero-detail>
 
 
